kubernetes/security/gatekeeper/constraints/capabilities-deny.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyCapabilities
metadata:
  name: capabilities-deny
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
