kubernetes/security/gatekeeper/constraints/container-must-not-run-as-root.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyContainerRoot
metadata:
  name: container-must-not-run-as-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
