kubernetes/security/gatekeeper/constraints/hostpath-deny.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostPath
metadata:
  name: hostpath-deny
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
