kubernetes/security/gatekeeper/constraints/nodeport-deny.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNodePort
metadata:
  name: nodeport-deny
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
