kubernetes/security/gatekeeper/constraints/privileged-deny.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyPrivileged
metadata:
  name: privileged-deny
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
