kubernetes/security/gatekeeper/constraints/root-forbidden.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyContainerRoot
metadata:
  name: root-forbidden
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
